# libkcore

./: .gitignore  CMakeLists.txt  README.md
src/: kcore.h
